Added the ability to update items

--- a/web_server/static/index.html
+++ b/web_server/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Inventory History</title>
+    <title>Inventory Management</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
