Added id in sqllite for distinction; add clear history button

--- a/web_server/static/index.html
+++ b/web_server/static/index.html
@@ -19,7 +19,9 @@
         <hr>
 
         <button id="historyBtn" onclick="toggleHistory()">View Change History</button>
+        <button id="clearHistoryBtn" onclick="clearHistory()">Clear History Log</button>
         <ul id="historyList">
+        
             </ul>
     </div>
 
